# eertree

./: .ghci  .gitignore  ChangeLog.md  LICENSE  README.md  a216264.aux  a216264.hp  a216264.ps  doc-index.html  eertre.html  eertree-alphabet.html  eertree-master.html  index.html  package.yaml  stack.yaml
QuickCheck-2.14.2/: QuickCheck.haddock  Test-QuickCheck-All.html  Test-QuickCheck-Arbitrary.html  Test-QuickCheck-Function.html  Test-QuickCheck-Gen-Unsafe.html  Test-QuickCheck-Gen.html  Test-QuickCheck-Modifiers.html  Test-QuickCheck-Monadic.html  Test-QuickCheck-Poly.html  Test-QuickCheck.html  doc-index-46.html  doc-index-58.html  doc-index-61.html  doc-index-62.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  doc-index.json  index.html
all/: doc-index-124.html  doc-index-126.html  doc-index-33.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-92.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  (+5 more)
app/: A216264.hs  Benchmarking.ipynb  Testing.ipynb  generated_input.txt
app/cpp/: CMakeLists.txt  MSUBSTR  MSUBSTR.cpp  Makefile  QueryreuQ  eertree.h  eertree2.h  queries.cpp  rich.cpp
app/cpp/lib/: eertree_classic.h  eertree_direct.h  eertree_semi_pers.h
app/cpp/src/msubstr/: msubstr.cpp  msubstr.h  msubstr_classic.cpp  msubstr_direct.cpp  msubstr_semi_pers.cpp
app/cpp/src/queries/: queries.cpp  queries.h  queries_direct.cpp  queries_semi_pers.cpp
app/cpp/src/rich/: rich.cpp  rich.h  rich_direct.cpp  rich_semi_pers.cpp  rich_simple.h
array-0.5.4.0/: Data-Array-IArray.html  Data-Array-IO-Safe.html  Data-Array-IO.html  Data-Array-MArray-Safe.html  Data-Array-MArray.html  Data-Array-ST-Safe.html  Data-Array-ST.html  Data-Array-Storable-Safe.html  Data-Array-Storable.html  Data-Array-Unboxed.html  Data-Array-Unsafe.html  Data-Array.html  array.haddock  array.txt  doc-index.html  doc-index.json  index.html
base-4.17.1.0/: Control-Applicative.html  Control-Arrow.html  Control-Category.html  Control-Concurrent-Chan.html  Control-Concurrent-MVar.html  Control-Concurrent-QSem.html  Control-Concurrent-QSemN.html  Control-Concurrent.html  Control-Exception-Base.html  Control-Exception.html  Control-Monad-Fail.html  Control-Monad-Fix.html  Control-Monad-IO-Class.html  Control-Monad-Instances.html  Control-Monad-ST-Lazy-Safe.html  Control-Monad-ST-Lazy-Unsafe.html  Control-Monad-ST-Lazy.html  Control-Monad-ST-Safe.html  Control-Monad-ST-Strict.html  Control-Monad-ST-Unsafe.html  Control-Monad-ST.html  Control-Monad-Zip.html  Control-Monad.html  Data-Array-Byte.html  Data-Bifoldable.html  Data-Bifunctor.html  Data-Bitraversable.html  Data-Bits.html  Data-Bool.html  Data-Char.html  Data-Coerce.html  Data-Complex.html  Data-Data.html  Data-Dynamic.html  Data-Either.html  Data-Eq.html  Data-Fixed.html  Data-Foldable.html  Data-Function.html  Data-Functor-Classes.html  (+234 more)
bench/: Main.hs  benchmarks.ipynb
bench/cpp/: CMakeLists.txt  Main.hs  Makefile  bench.cpp  eertree.cpp  eertree1.h  eertree2.h  output.csv
bench/cpp/A216264/: bench1.cpp  bench2.cpp  eertree1.h  eertree2.h
bench/cpp/Msubstr/: bench.cpp
bench/cpp/msubstr/: bench_msubstr.cpp
bench/cpp/queries/: bench_queries.cpp
bench/cpp/rich/: bench_rich.cpp
bench/cpp/simple/: bench1.cpp  bench2.cpp  bench_simple.cpp  eertree1.h  eertree2.h
bytestring-0.11.4.0/: Data-ByteString-Builder-Extra.html  Data-ByteString-Builder-Internal.html  Data-ByteString-Builder-Prim-Internal.html  Data-ByteString-Builder-Prim.html  Data-ByteString-Builder-RealFloat.html  Data-ByteString-Builder.html  Data-ByteString-Char8.html  Data-ByteString-Internal.html  Data-ByteString-Lazy-Char8.html  Data-ByteString-Lazy-Internal.html  Data-ByteString-Lazy.html  Data-ByteString-Short-Internal.html  Data-ByteString-Short.html  Data-ByteString-Unsafe.html  Data-ByteString.html  bytestring.haddock  doc-index-33.html  doc-index-62.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index-Y.html  doc-index-Z.html  doc-index.html  (+2 more)
containers-0.6.7/: Data-Containers-ListUtils.html  Data-Graph.html  Data-IntMap-Internal-Debug.html  Data-IntMap-Internal.html  Data-IntMap-Lazy.html  Data-IntMap-Merge-Lazy.html  Data-IntMap-Merge-Strict.html  Data-IntMap-Strict-Internal.html  Data-IntMap-Strict.html  Data-IntMap.html  Data-IntSet-Internal.html  Data-IntSet.html  Data-Map-Internal-Debug.html  Data-Map-Internal.html  Data-Map-Lazy.html  Data-Map-Merge-Lazy.html  Data-Map-Merge-Strict.html  Data-Map-Strict-Internal.html  Data-Map-Strict.html  Data-Map.html  Data-Sequence-Internal-Sorting.html  Data-Sequence-Internal.html  Data-Sequence.html  Data-Set-Internal.html  Data-Set.html  Data-Tree.html  Utils-Containers-Internal-BitQueue.html  (+38 more)
(+789 files in other folders)
